<resources>
    <string name="app_name">Comic Vine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading1">Loading...</string>
    <string name="title">Title</string>
    <string name="issue">Issue #</string>
    <string name="description">Description</string>
    <string name="creators">Creators</string>
    <string name="characters">Characters</string>
    <string name="teams">Teams</string>
    <string name="locations">Locations</string>
    <string name="loading">Loading...</string>
    <string name="year">year:</string>
    <string name="episodes">episodes</string>
    <string name="episodes1">episodes</string>
</resources>
