<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/world_map"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_detail_container"/>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:id="@+id/toolbar_detail"
        app:titleTextColor="@android:color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loading"
                            android:layout_centerInParent="true"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp"/>

                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:id="@+id/id_image"/>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/id_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/white"
                        android:text="@string/title"
                        android:textSize="21sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="12dp"
                            android:textColor="@android:color/darker_gray"
                            android:text="@string/issue"
                            android:textSize="14sp"
                            />
                        <TextView
                            android:id="@+id/id_issue_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="12dp"
                            android:textColor="@android:color/darker_gray"
                            android:text="@string/title"
                            android:textSize="14sp"
                            />
                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@android:color/holo_orange_dark"
                        android:text="@string/description"
                        android:textSize="16sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white"/>

                    <TextView
                        android:id="@+id/id_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:textColor="@android:color/white"
                        android:text="@string/description"
                        android:textSize="18sp"
                        />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/holo_orange_dark"
                        android:text="@string/creators"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/id_creators_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/characters"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/id_characters_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/teams"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/id_teams_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/locations"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/white"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/id_locations_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>